--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<version>3.5.5</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.jeffreyning</groupId>
+			<artifactId>mybatisplus-plus</artifactId>
+			<version>1.7.4-RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
