--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 <!--			<version>3.0.0</version>-->
 <!--		</dependency>-->
 		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.1.Final</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-boot-starter</artifactId>
 			<version>3.5.5</version>
